k8s/production/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle-mariadb
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle-mariadb
  template:
    metadata:
      labels:
        app: moodle-mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: moodle-mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: moodle-mariadb
  namespace: production
spec:
  selector:
    app: moodle-mariadb
  ports:
    - port: 3306
      targetPort: 3306
