k8s/production/moodle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
        - name: moodle
          image: jiaying0811/esm-moodle:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: moodledata-storage
              mountPath: /var/moodledata
      volumes:
        - name: moodledata-storage
          persistentVolumeClaim:
            claimName: moodle-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: moodle
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: moodle
  ports:
    - port: 80
      targetPort: 80
